# pinentry-fprint

./: .gitignore  Cargo.toml  README.md  install.sh  pinentry-fprint.desktop
.github/workflows/: ci.yml  release.yml
qml/: fingerprint.qml  qml-run.cpp  save.qml
src/: assuan.rs  fingerprint.rs  main.rs  secret.rs  ui.rs
