[package]
name = "pinentry-fprint"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "pinentry-fprint"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
futures-lite = "2"
rpassword = "7"
zeroize = "1"
